fix many more UseDiamondOperator violations, redundant casts and other things